...
        android:textSize="18sp"
        android:textColor="@color/bordeaux_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_list_header"/>

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:divider="@color/white"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_list_subheader"
        tools:listitem="@layout/fragment_event_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scan_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/qr_scan_fab"
        app:backgroundTint="@color/peach_contrast"
...
