...
                android:textColor="@color/bordeaux_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countOfCheckIns" />

            <TextView
                android:id="@+id/view_attendance_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_oblique"
                android:padding="2dp"
                android:text="@string/see_more"
                android:textColor="@color/bordeaux_medium"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/miniMapCardView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:visibility="gone"
                app:cardCornerRadius="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
