<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eventListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/events"
        android:title="@string/events_attending" />
    <item
        android:id="@+id/eventOrganizerListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/event_organizing"
        android:title="@string/events_organizing" />
    <item
        android:id="@+id/eventBrowseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/browse_events"
        android:title="@string/browse_events" />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
    <item
        android:id="@+id/imageBrowseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:icon="@drawable/ic_menu_gallery"
        android:visible="false"
        android:title="@string/browse_images" />
    <item
        android:id="@+id/profileBrowseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:icon="@drawable/attendance"
        android:visible="false"
        android:title="@string/browse_profiles"
        />

</menu>