...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/menu_bar_vertical_offset"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/plum_dark"
        android:textColorHint="@color/mauve_medium_light"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_phone"
        app:layout_constraintEnd_toStartOf="@id/edit_text_last_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/edit_text_phone"
        app:layout_constraintTop_toBottomOf="@+id/image_view_profile"
        app:layout_constraintVertical_chainStyle="spread" />

...
